wysiwyg on event description

--- a/src/views/pages/events/event-details.ejs
+++ b/src/views/pages/events/event-details.ejs
@@ -29,7 +29,7 @@
                         <h2 class="title"><%= event.title %></h2>
                     </div>
 
-                    <p><%= event.description %></p>
+                    <p><%- event.description %></p>
 
                     <div class="date-place">
                         <div class="date"><%= moment(event.start).format("DD [de] MMMM [de] YYYY, H[h]") %></div>
