--- a/public/css/event.css
+++ b/public/css/event.css
@@ -139,3 +139,16 @@
 }
 
 
+
+
+.modal .modal-content {
+  width: auto;
+}
+
+.modal .modal-body {
+  padding: 0;
+}
+
+.modal .modal-body img {
+  max-width: 100%;
+}
