enlarge image modal on event details page

--- a/public/css/event.css
+++ b/public/css/event.css
@@ -142,7 +142,9 @@
 
 
 .modal .modal-content {
-  width: auto;
+  text-align: center;
+  background: none;
+  border: none;
 }
 
 .modal .modal-body {
