--- a/src/views/pages/events/events-list.ejs
+++ b/src/views/pages/events/events-list.ejs
@@ -17,7 +17,7 @@
 
         <div class="page-header">
             <div id="page-header-bg" data-stellar-background-ratio="0.5">
-                <h1 id="title-city-name"><%=translation.slogan%></h1>
+                <h1 id="title-city-name" class="text-uppercase"><%=translation.slogan%></h1>
             </div>
         </div>
 
