--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -22,16 +22,30 @@
         <div class="col-md-6">
             <div class="footer-widget">
                 <div class="footer-logo">
-                    <a href="/" class="logo"><img src="/img/sulbaguia-logo-h-t.png" alt=""></a>
+                    <% if(host.includes('sulbaguia')) { %>
+                        <a href="/" class="logo"><img src="/img/sulbaguia-logo-h-t.png" alt=""></a>
+                    <% } else { %>
+                        <span>Nome do site</span>
+                    <% } %>
                 </div>
                 <p class="text-justify"><%= translation.footer.mission %></p>
                 <p class="mt-3 mb-3 mail-text">
-                    <a href="mailto:contato@sulbaguia.com.br" target="_blank">contato@sulbaguia.com.br</a>
+                        <% if(host.includes('sulbaguia')) { %>
+                            <a href="mailto:contato@sulbaguia.com.br" target="_blank">contato@sulbaguia.com.br</a>
+                        <% } else { %>
+                            <a href="mailto:contato@nomedosite.com.br" target="_blank">contato@nomedosite.com.br</a>
+                        <% } %>
                 </p>
                 <ul class="contact-social">
-                    <li><a href="https://fb.me/sulbaguia" target="_blank"><i class="fab fa-facebook-f s-facebook"></i></a></li>
-                    <li><a href="https://instagram.com/sulbaguia" target="_blank"><i class="fab fa-instagram s-instagram"></i></a></li>
-                    <li><a href="mailto:contato@sulbaguia.com.br" target="_blank"><i class="far fa-envelope s-email"></i></a></li>
+                    <% if(host.includes('sulbaguia')) { %>
+                        <li><a href="https://fb.me/sulbaguia" target="_blank"><i class="fab fa-facebook-f s-facebook"></i></a></li>
+                        <li><a href="https://instagram.com/sulbaguia" target="_blank"><i class="fab fa-instagram s-instagram"></i></a></li>
+                        <li><a href="mailto:contato@sulbaguia.com.br" target="_blank"><i class="far fa-envelope s-email"></i></a></li>
+                    <% } else { %>
+                        <li><a href="https://fb.me/nomedosite" target="_blank"><i class="fab fa-facebook-f s-facebook"></i></a></li>
+                        <li><a href="https://instagram.com/nomedosite" target="_blank"><i class="fab fa-instagram s-instagram"></i></a></li>
+                        <li><a href="mailto:contato@nomedosite.com.br" target="_blank"><i class="far fa-envelope s-email"></i></a></li>
+                    <% } %>
                 </ul>
             </div>
         </div>
