--- a/public/css/aside.css
+++ b/public/css/aside.css
@@ -69,6 +69,7 @@ button.update-filters {
 \*----------------------------*/
 .ad-widget img {
   max-width: 280px;
+  margin-bottom: 20px;
 }
 
 /*----------------------------*\
