--- a/public/css/events.css
+++ b/public/css/events.css
@@ -68,10 +68,11 @@
 
 .event-row-title {
   position: relative;
-  margin-bottom: 12px;
+  margin-bottom: 24px;
   margin-left: -15px;
   margin-right: -15px;
   max-width: 100vw !important;
+  margin-top: 36px;
 }
 
 .event-row-title h2 {
@@ -79,8 +80,8 @@
   padding: 0 12px;
   position: relative;
   display: inline-block;
-  font-size: 18px;
-  margin-top: 0px;
+  font-size: 28px;
+  margin-top: 0;
   margin-bottom: 0px;
   z-index: 20;
   font-family: 'Montserrat', sans-serif;
@@ -107,12 +108,12 @@
 }
 
 .event {
-  width: 240px;
-  height: 280px;
+  max-width: 480px;
+  width: 100%;
+  margin-left: 0px !important;
   background-color: #fff;
   box-shadow: 0 1px 1px 1px lightgrey;
   cursor: pointer;
-  border-radius: 4px;
 }
 .event:hover {
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -121,25 +122,19 @@
 
 .event a.anchor-wrapper {
   position: absolute;
-  height: 280px;
   width: 240px;
 }
 
 
 .event-img {
   display: block;
-  height: 208px;
-  height: 208px;
   overflow: hidden;
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
 }
-.event:hover .event-img {
-  height: 207px;
-}
+
 .event-img > img {
   width: 100%;
-  height: 100% !important;
   -webkit-transition: 1.6s -webkit-transform;
   transition: 1.6s -webkit-transform;
   transition: 1.6s transform;
@@ -241,8 +236,45 @@ ul.event-tags li:last-child:after {
 
 
 
+.event-list-advertise {
+  margin: 8px;
+}
 
 
+.card.ad-card {
+  max-width: 520px !important;
+  margin: auto;
+}
+
+.card.ad-card > .card-header > i {
+  font-size: 24px;
+}
+
+.card.ad-card > .card-header > span {
+  font-size: 20px;
+  margin-left: 12px; 
+}
+
+.card.ad-card > img.card-img-top {
+  width: calc(100% - 2px);
+  margin: 0 1px;
+}
+
+.card.ad-card > .card-body > .card-title {
+  color: rgba(0,0,0,0.84);
+}
+
+.card.ad-card > .card-body > .card-text {
+  text-align: justify;
+  color: rgba(0,0,0,0.84);
+}
+
+.card.ad-card > .card-body > .card-text > span {
+  font-weight: bold;
+  color: rgba(0,0,0,0.4);
+  cursor: pointer;
+  margin-left: 4px;
+}
 
 /*
   Bootrstap 4 Grid responsive widths
@@ -268,10 +300,6 @@ ul.event-tags li:last-child:after {
     font-size: 28px;
     margin-top: 125px;
   }
-
-  .see-more-events {
-    margin-left: -36px;
-  }
 }
 
 @media only screen and (max-width: 991px) {
@@ -290,10 +318,6 @@ ul.event-tags li:last-child:after {
     font-size: 24px;
     margin-top: 112px;
   }
-
-  .see-more-events {
-    margin-left: -36px;
-  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -301,7 +325,7 @@ ul.event-tags li:last-child:after {
     text-align: center;
   }
   .event-row-title h2 {
-    font-size: 16px;
+    font-size: 20px;
   }
   .event-row-title:after {
     top: 11px;
@@ -379,9 +403,14 @@ ul.event-tags li:last-child:after {
     margin-top: 24px !important;
   }
 
+  .event-row:first-child {
+    margin-top: 0 !important;
+  }
+
+
   .event-row-title {
     position: inherit;
-    margin-bottom: 12px;
+    margin-bottom: 24px;
     margin-left: 16px;
     margin-right: 0;
     width: auto;
