--- a/src/views/pages/events/part-events-list.ejs
+++ b/src/views/pages/events/part-events-list.ejs
@@ -14,11 +14,12 @@
     <div class="filters-row p-1 mx-1 d-block d-sm-none">
         <div class="d-flex justify-content-around">
             <% appliedFilters.tags.forEach(function(city) { %>
-                <button type="button" class="btn btn-outline-success" disabled><%= city %></button>
+                <button type="button" class="btn btn-outline-primary" disabled><%= city %></button>
             <% }) %>
         </div>
     </div>
 <% } %>
+
 
 <!-- views/partials/index-partial-events.ejs -->
 <% let dateBlockNum = 0;
@@ -39,45 +40,102 @@
                                 AMANHÃ | 
                             <% } %>
                             <%= moment(events[monthDate][0]['start']).format("DD/MM").replace('/', '.') %>
-                            | <%= moment(events[monthDate][0]['start']).format("dddd").replace('-feira', '') %>
+                            | <%= translation.weekdays[moment(events[monthDate][0]['start']).format("d")] %>
                         </h2>
                     </div>
                 </div>
             </div>
 
-            <div class="slider-container slide-<%=dateIndex%>">
+            <div>
                 <% events[monthDate].forEach(function(event, index) { %>
-                    <div class=".col-12 .col-sm-6 .col-md-4 .col-lg-3 .col-xl-3 mb-3">
+                    <div class=".col-12 .col-sm-6 .col-md-4 .col-lg-3 .col-xl-3 mb-4">
                         <div class="event ml-2 mr-2">
-                            <a class="anchor-wrapper" href="/eventos/<%=event.cityCode%>/<%=event.orgCode%>/<%=event.code%>">
-                                <a class="event-img" href="#" onclick="return false;"><img src="<%= event.images[0] %>" alt=""></a>
-                                <% if (event.featured) { %>
-                                    <i class="fas fa-star featured-event-star"></i>
-                                <% } %>
-                                <div class="event-body">
-                                    <div class="event-org-city">
-                                        <%= event.orgName %>
-                                        <span class="city"><%= event.cityName %></span>
-                                    </div>
-                                    <div class="ev-body-second-row">
-                                        <h3 class="event-title"><%= event.title %></h3>
-                                        <span class="time"><%= moment(event.start).format('H[h]') %></span>
-                                    </div>
-                                    <ul class="event-tags">
-                                        <% event.tags.slice(0,5).forEach((tag) => { %>
-                                            <li><%= tags.find(tag_ => tag_.code === tag).title %></li>
-                                        <% }) %>
-                                    </ul>
+                            <a class="event-img" href="/eventos/<%=event.cityCode%>/<%=event.orgCode%>/<%=event.code%>"><img src="<%= event.images[0] %>" alt=""></a>
+                            <% if (event.featured) { %>
+                                <i class="fas fa-star featured-event-star"></i>
+                            <% } %>
+                            <div class="event-body">
+                                <div class="event-org-city">
+                                    <%= event.orgName %>
+                                    <span class="city"><%= event.cityName %></span>
                                 </div>
-                            </a>
+                                <div class="ev-body-second-row">
+                                    <h3 class="event-title"><%= event.title %></h3>
+                                    <span class="time"><%= moment(event.start).format('H[h]') %></span>
+                                </div>
+                                <ul class="event-tags">
+                                    <% event.tags.slice(0,5).forEach((tag) => { %>
+                                        <li><%= tags.find(tag_ => tag_.code === tag).title %></li>
+                                    <% }) %>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 <% }) %>
             </div>
+            <% if(dateIndex < ads.length) { %>
+                <div class="ad-card card border-success mb-3 mx-4" style="max-width: 18rem;">
+                    <div class="card-header">
+                        <% if(ads[dateIndex].type === 'eat') { %>
+                            <i class="fas fa-utensils"></i>
+                            <span>Onde comer</span>
+                        <% } %>
+                        <% if(ads[dateIndex].type === 'todo') { %>
+                            <i class="fas fa-map-signs"></i>
+                            <span>O que fazer</span>
+                        <% } %>
+                        <% if(ads[dateIndex].type === 'stay') { %>
+                            <i class="fas fa-bed"></i>
+                            <span>Onde ficar</span>
+                        <% } %>
+                        <% if(ads[dateIndex].type === 'util') { %>
+                            <i class="fas fa-sign"></i>
+                            <span>Utilidade pública</span>
+                        <% } %>
+                        <% if(ads[dateIndex].type === 'promo') { %>
+                            <i class="fas fa-bolt"></i>
+                            <span>Promoção relâmpago</span>
+                        <% } %>
+                        <% if(ads[dateIndex].type === 'services') { %>
+                            <i class="fas fa-hands-helping"></i>
+                            <span>Serviços</span>
+                        <% } %>
+                    </div>
+                    <img class="card-img-top" src="<%= ads[dateIndex].image %>" alt="Card image cap">
+                    <div class="card-body text-info">
+                        <h5 class="card-title"><%= ads[dateIndex].title %></h5>
+                        <p class="card-text d-none full-description"><%= ads[dateIndex].description %></p>
+                        <p class="card-text partial-description">
+                            <%= ads[dateIndex].description.substring(0, 250) %>
+                            <% if(ads[dateIndex].description.length > 250) { %>
+                                <span class="ad-see-more" data-ad-id="<%= ads[dateIndex].id %>">...mais</span>
+                            <% } %>
+                        </p>
+                    </div>
+                    <div class="card-actions text-center mb-3">
+                        <!-- <a class="btn btn-outline-success" role="button" href="<%= ads[dateIndex].ctaLabel %>"><%= ads[dateIndex].ctaLink %></a> -->
+                        <a class="btn btn-outline-success btn-sm" target="_blank" href="<%= ads[dateIndex].ctaLink %>" role="button" data-ad="<%= ads[dateIndex] %>"><%= ads[dateIndex].ctaLabel %></a>
+                    </div>
+                </div>
+                <div>
+                    <!-- <%= ads[dateIndex].image %> -->
+                    <!-- <%= ads[dateIndex].title %> -->
+                    <!-- <%= ads[dateIndex].description %> -->
+                    <!-- <%= ads[dateIndex].type %>
+                    <%= ads[dateIndex].empresa %>
+                    <%= ads[dateIndex].ctaLink %>
+                    <%= ads[dateIndex].ctaLabel %> -->
+                </div>
+            <% } %>
+            <!-- <div class="text-center event-list-advertise">
+                <a href="/anunciar" style="display: inline-block;margin: auto;">
+                    <img class="img-responsive t-300-250" src="/img/ad/anuncie-aqui-728-90.png" alt="">
+                </a>
+            </div> -->
         </div>
     <% } %>
 <% }) %>
 
 <div class="see-more-events text-center mb-3">
-    <button class="btn btn-sucess">Ver mais eventos</button>
+    <button class="btn btn-sucess btn-outline-success">Ver mais eventos</button>
 </div>
