--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -16,7 +16,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <title>SulBAGuia</title>
+  <title>Sul BA Guia | Eventos e guia do Sul da Bahia</title>
   
   <!-- Google font -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
